[package]
name = "xssh"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
expanduser = "1.2.2"
indicatif = { version = "0.17.8", features = ["rayon"] }
log = "0.4.21"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
